--- a/app.json
+++ b/app.json
@@ -1,9 +1,9 @@
 {
-  "name": "Esther Bot",
-  "description": "Esther, bot.",
-  "keywords": ["esther", "bot", "express"],
-  "website": "https://estherbot.com",
-  "repository": "https://github.com/esthercrawford/smooch-bot-example",
+  "name": "Voterbot",
+  "description": "voter, bot.",
+  "keywords": ["voter", "bot", "express"],
+  "website": "https://voterbot-1.herokuapp.com",
+  "repository": "https://github.com/tjcs/EstherBot",
   "logo": "http://www.estherbot.com/wp-content/uploads/2016/03/EstherBot-photo.png",
   "env": {
     "SMOOCH_APP_TOKEN": {
